--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
  </head>
 
  <body>
-
+ 		<?php
+ 		 	for ($i=0; $i < 10; $i++) { 
+ 		 		for ($j=$i; $j < 10; $j++) { 
+ 		 			echo "*";
+ 		 		}
+ 		 		echo "<br>";
+ 		 	}
+ 		?>
  </body>
 
  </html>
